  "big" versions (i.e., supporting >2^31 entries in arrays (simulated),
  elements in lists, terms, documents, nodes, etc.). Please read our
  (short) "Moving Java to Big Data" document for details.

- it.unimi.dsi.util.LongBigList is dead. Long live to
  it.unimi.dsi.fastutil.longs.LongBigList. We're sorry for the
  nuisance--adapting the code should be very easy (and we warned you
  anyway :).

- All classes should support big collections. They use the new Size64
  interface from fastutil. Implementations still support the old
  (deprecated) length() method for backward compatibility.

- New FileLinesBigList class.

2.0.1

- Sux4J is now distributed under the GNU Lesser General Public
  License 3.

- Major rewriting of the hypergraph peeling code. Now we use less memory
  and we are definitely faster.

- MWHCFunction and MinimalPerfectHashFunction accept a temporary directory
  for the chunked hash store files.

- Improved ChunkedHashStore architecture that allow arbitrary values,
  so functions can be built without keeping values in memory.

- Fixed bug in MinimalPerfetHashFunction that was causing exceptions
  when using more than a billion keys (thanks to Wei Liu for reporting
  and fixing this bug).

- Fixed bug in some rank/select classes that was causing integer overflow
  errors when building structure over bit vectors with >2Gi bits.

- AbstractLongBitVector.equals() now uses getLong() on word boundaries.

- Fixed pernicious bug in Select9.

2.0

- General revamp, restructuring, improvements, new coherent names for
  classes. Most of the code has been rewritten or improved.

- New (partial) structures for balanced parentheses.

- New build system based on ChunkedHashStore that works for billions
  of keys.

- New structures for balanced parentheses (partially implemented).

- Faster Select9 operation: some broadword operations were implemented in
  a redundant way.

- SparseSelect/SparseRank would give an incorrect (or at least little