@@ -6,10 +6,12 @@ import it.unimi.dsi.bits.TransformationStrategies;
 import java.io.IOException;
 import java.util.Iterator;
 
+import org.junit.Ignore;
 import org.junit.Test;
 
 public class HollowTrieDistributorMonotoneMinimalPerfectHashFunctionSlowTest {
 
+	@Ignore("Takes a couple of days")
 	@Test
 	public void testBig() throws IOException {
 		Iterable<Long> p = LargeLongCollection.getInstance();		
